--- a/1.4Matplotlib：绘图.ipynb
+++ b/1.4Matplotlib：绘图.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8529dfbc39d790fc903f601dbf7e0334d4bbde1466217f65a8f38fb23441f03c"
+  "signature": "sha256:728e7b6eadf01bb185d2040c558039569566a70982ef6fdaf7464ce0d18b696e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -312,11 +312,16 @@
       "**\u63d0\u793a**\uff1a\u6587\u6863\n",
       "* [Artists](http://matplotlib.sourceforge.net/api/artist_api.html)\n",
       "* [BBox](http://matplotlib.sourceforge.net/api/artist_api.html#matplotlib.text.Text.set_bbox)\n",
-      " The tick labels are now hardly visible because of the blue and red lines. We can make them bigger and we can also adjust their properties such that they\u2019ll be rendered on a semi-transparent white background. This will allow us to see both the data and the labels.\n",
-      "...\n",
+      "\n",
+      "\u56e0\u4e3a\u84dd\u8272\u548c\u7ea2\u8272\u7684\u7ebf\uff0c\u523b\u5ea6\u6807\u7b7e\u5f88\u96be\u770b\u5230\u3002\u6211\u4eec\u53ef\u4ee5\u8ba9\u4ed6\u4eec\u66f4\u5927\u4e00\u4e9b\uff0c\u4e5f\u53ef\u4ee5\u8c03\u6574\u4ed6\u4eec\u7684\u5c5e\u6027\u4ee5\u4fbf\u4ed6\u4eec\u88ab\u5904\u7406\u4e3a\u534a\u900f\u660e\u7684\u767d\u8272\u80cc\u666f\u3002\u8fd9\u6837\u6211\u4eec\u5c31\u53ef\u4ee5\u540c\u65f6\u770b\u5230\u6570\u636e\u548c\u6807\u7b7e\u3002\n",
+      "\n",
+      "```python\n",
       "for label in ax.get_xticklabels() + ax.get_yticklabels():\n",
       "    label.set_fontsize(16)\n",
-      "    label.set_bbox(dict(facecolor='white', edgecolor='None', alpha=0.65))\n"
+      "    label.set_bbox(dict(facecolor='white', edgecolor='None', alpha=0.65))\n",
+      "```\n",
+      "\n",
+      "<a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_exercice_10.html\"><img alt=\"plot_exercice_10_1.png\" class=\"align-right\" src=\"http://scipy-lectures.github.io/_images/plot_exercice_10_1.png\" style=\"width: 280.0px; height: 175.0px;\"></a>"
      ]
     },
     {
