--- a/1.4Matplotlib：绘图.ipynb
+++ b/1.4Matplotlib：绘图.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:384bc4ffb334b33a4ba4af8e09c32f474412ae1cc61d772c06c483e656e9c010"
+  "signature": "sha256:5dfc3ae85365c41470c532ac2f057ef0f2058898ba51a71a9e561c348f3b5a41"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -354,15 +354,170 @@
       "\n",
       "### 1.4.3.2 \u5b50\u56fe\n",
       "\n",
-      "\u7528\u5b50\u56fe\u4f60\u53ef\u4ee5\u5c06\u56fe\u7247\u653e\u7f6e\u5728\u6807\u51c6\u65b9\u683c\u4e2d\u3002\u4f60\u9700\u8981\u6307\u5b9a\u884c\u5217\u6570\u548c\u56fe\u7247\u6570\u3002 With subplot you can arrange plots in a regular grid. You need to specify the number of rows and columns and the number of the plot. Note that the gridspec command is a more powerful alternative.\n",
-      "As with other objects, you can set figure properties also setp or with the set_something methods.\n",
-      "When you work with the GUI you can close a figure by clicking on the x in the upper right corner. But you can close a figure programmatically by calling close. Depending on the argument it closes (1) the current figure (no argument), (2) a specific figure (figure number or figure instance as argument), or (3) all figures (\"all\" as argument)."
+      "\u7528\u5b50\u56fe\u4f60\u53ef\u4ee5\u5c06\u56fe\u7247\u653e\u7f6e\u5728\u6807\u51c6\u65b9\u683c\u4e2d\u3002\u4f60\u9700\u8981\u6307\u5b9a\u884c\u5217\u6570\u548c\u56fe\u7247\u6570\u3002 \u6ce8\u610f[gridspec](http://matplotlib.org/users/gridspec.html)\u547d\u4ee4\u76f8\u5bf9\u66f4\u52a0\u9ad8\u7ea7\u3002\n",
+      "\n",
+      "<a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_subplot-horizontal.html\"><img alt=\"plot_subplot-horizontal_1.png\" src=\"http://scipy-lectures.github.io/_images/plot_subplot-horizontal_1.png\" style=\"width: 168.0px; height: 112.0px;\"></a><a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_subplot-vertical.html\"><img alt=\"plot_subplot-vertical_1.png\" src=\"http://scipy-lectures.github.io/_images/plot_subplot-vertical_1.png\" style=\"width: 168.0px; height: 112.0px;\"></a><a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_subplot-grid.html\"><img alt=\"plot_subplot-grid_1.png\" src=\"http://scipy-lectures.github.io/_images/plot_subplot-grid_1.png\" style=\"width: 168.0px; height: 112.0px;\"></a><a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_gridspec.html\"><img alt=\"plot_gridspec_1.png\" src=\"http://scipy-lectures.github.io/_images/plot_gridspec_1.png\" style=\"width: 168.0px; height: 112.0px;\"></a>\n",
+      "\n",
+      "\n",
+      "### 1.4.3.3 \u8f74\n",
+      "\n",
+      "\u8f74\u4e0e\u5b50\u56fe\u975e\u5e38\u7c7b\u4f3c\uff0c\u4e0d\u8fc7\u5141\u8bb8\u56fe\u5f62\u653e\u5728\u56fe\u7247\u7684\u4efb\u610f\u4f4d\u7f6e\u3002\u56e0\u6b64\uff0c\u5982\u679c\u6211\u4eec\u60f3\u8981\u5c06\u4e00\u4e2a\u5c0f\u56fe\u5f62\u653e\u5728\u4e00\u4e2a\u66f4\u5927\u56fe\u5f62\u4e2d\uff0c\u6211\u4eec\u53ef\u4ee5\u7528\u8f74\u3002\n",
+      "\n",
+      "<a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_axes.html\"><img alt=\"plot_axes_1.png\" src=\"http://scipy-lectures.github.io/_images/plot_axes_1.png\" style=\"width: 280.0px; height: 210.0px;\"></a><a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_axes-2.html\"><img alt=\"plot_axes-2_1.png\" src=\"http://scipy-lectures.github.io/_images/plot_axes-2_1.png\" style=\"width: 280.0px; height: 210.0px;\"></a>\n",
+      "\n",
+      "### 1.4.3.4 \u523b\u5ea6\n",
+      "\n",
+      "\u683c\u5f0f\u826f\u597d\u7684\u523b\u5ea6\u662f\u51c6\u5907\u597d\u53d1\u5e03\u56fe\u7247\u7684\u5fc5\u8981\u90e8\u5206\u3002Matplotlib\u63d0\u4f9b\u4e86\u4e00\u4e2a\u5b8c\u5168\u53ef\u63a7\u7684\u523b\u5ea6\u7cfb\u7edf\u3002\u6709\u523b\u5ea6\u4f4d\u7f6e\u6765\u6307\u5b9a\u523b\u5ea6\u8be5\u51fa\u73b0\u5728\u54ea\uff0c\u8fd8\u6709\u523b\u5ea6\u683c\u5f0f\u6765\u7ed9\u51fa\u4f60\u60f3\u8981\u7684\u523b\u5ea6\u5916\u89c2\u3002\u4e3b\u523b\u5ea6\u548c\u5b50\u523b\u5ea6\u53ef\u4ee5\u88ab\u72ec\u7acb\u653e\u7f6e\u548c\u6574\u7406\u683c\u5f0f\u3002\u4e4b\u524d\u5b50\u523b\u5ea6\u9ed8\u8ba4\u662f\u4e0d\u663e\u793a\u7684\uff0c\u5373\u4ed6\u4eec\u53ea\u6709\u7a7a\u5217\u8868\uff0c\u56e0\u4e3a\u5b83\u662f`NullLocator` (\u89c1\u4e0b\u9762)\u3002\n",
+      "\n",
+      "#### 1.4.3.4.1 \u523b\u5ea6\u4f4d\u7f6e\n",
+      "\n",
+      "\u523b\u5ea6\u4f4d\u7f6e\u53ef\u4ee5\u63a7\u5236\u7684\u4f4d\u7f6e\u3002\u5b83\u7684\u8bbe\u7f6e\u5982\u4e0b\uff1a\n",
+      "\n",
+      "```python\n",
+      "ax = pl.gca()\n",
+      "ax.xaxis.set_major_locator(eval(locator))\n",
+      "```\n",
+      "\u4e0d\u540c\u7684\u9700\u6c42\u6709\u591a\u79cd\u4f4d\u7f6e\uff1a\n",
+      "\n",
+      "<a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_ticks.html\"><img alt=\"plot_ticks_1.png\" src=\"http://scipy-lectures.github.io/_images/plot_ticks_1.png\" style=\"width: 426.6px; height: 232.8px;\"></a>\n",
+      "\n",
+      "\u6240\u6709\u8fd9\u4e9b\u4f4d\u7f6e\u90fd\u53ef\u4ee5\u4ece\u57fa\u7840\u7c7b[matplotlib.ticker.Locator](http://matplotlib.org/api/ticker_api.html#matplotlib.ticker.Locator)\u884d\u751f\u51fa\u6765\u3002\u4f60\u53ef\u4ee5\u4ece\u4e2d\u884d\u751f\u51fa\u4f60\u81ea\u5df1\u7684\u4f4d\u7f6e\u3002\u5c06\u65e5\u671f\u5904\u7406\u4e3a\u523b\u5ea6\u7279\u522b\u56f0\u54ea\u3002\u56e0\u6b64\uff0c`matplotlib`\u63d0\u4f9b\u4e86\u7279\u6b8a\u7684\u4f4d\u7f6e`matplotlib.dates`\u3002\n",
+      "\n",
+      "## 1.4.4 \u5176\u4ed6\u7c7b\u578b\u7684\u56fe\u5f62\uff1a\u4f8b\u5b50\u4e0e\u7ec3\u4e60\n",
+      "\n",
+      "### 1.4.4.1 \u5e38\u89c4\u56fe\u5f62\n",
+      "\n",
+      "---\n",
+      "**\u63d0\u793a\uff1a**\u4f60\u53ef\u4ee5\u4f7f\u7528[fill_between](http://matplotlib.sourceforge.net/api/pyplot_api.html#matplotlib.pyplot.fill_between)\u547d\u4ee4\u3002\n",
+      "\n",
+      "---\n",
+      "\n",
+      "<a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_plot_ex.html\"><img alt=\"plot_plot_ex_1.png\" class=\"align-right\" src=\"http://scipy-lectures.github.io/_images/plot_plot_ex_1.png\" style=\"width: 280.0px; height: 210.0px;\"></a>\n",
+      "\n",
+      "\u4ece\u4e0b\u9762\u7684\u4ee3\u7801\u5f00\u59cb\uff0c\u8bd5\u7740\u91cd\u65b0\u751f\u6210\u8fd9\u4e2a\u56fe\u7247\uff0c\u5c0f\u5fc3\u5904\u7406\u586b\u5145\u533a\u57df\uff1a\n",
+      "\n",
+      "```python\n",
+      "n = 256\n",
+      "X = np.linspace(-np.pi, np.pi, n, endpoint=True)\n",
+      "Y = np.sin(2 * X)\n",
+      "\n",
+      "pl.plot(X, Y + 1, color='blue', alpha=1.00)\n",
+      "pl.plot(X, Y - 1, color='blue', alpha=1.00)\n",
+      "```\n",
+      "\u70b9\u51fb\u56fe\u7247\u67e5\u770b\u7b54\u6848\u3002\n",
+      "\n",
+      "### 1.4.4.2 \u6563\u70b9\u56fe\n",
+      "\n",
+      "---\n",
+      "**\u63d0\u793a\uff1a**\u989c\u8272\u6839\u636e\u89d2\u5ea6\u8fdb\u884c\u5206\u914d\n",
+      "\n",
+      "---\n",
+      "\n",
+      "<a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_scatter_ex.html\"><img alt=\"plot_scatter_ex_1.png\" class=\"align-right\" src=\"http://scipy-lectures.github.io/_images/plot_scatter_ex_1.png\" style=\"width: 280.0px; height: 210.0px;\"></a>\n",
+      "\n",
+      "\n",
+      "\u4ece\u4e0b\u9762\u7684\u4ee3\u7801\u5f00\u59cb\uff0c\u8bd5\u7740\u91cd\u65b0\u751f\u6210\u8fd9\u4e2a\u56fe\u7247\uff0c\u5c0f\u5fc3\u5904\u7406\u6807\u8bb0\u7684\u5927\u5c0f\u989c\u8272\u548c\u900f\u660e\u5ea6\uff1a\n",
+      "\n",
+      "```python\n",
+      "n = 1024\n",
+      "X = np.random.normal(0,1,n)\n",
+      "Y = np.random.normal(0,1,n)\n",
+      "\n",
+      "pl.scatter(X,Y)\n",
+      "```\n",
+      "\u70b9\u51fb\u56fe\u7247\u67e5\u770b\u7b54\u6848\u3002\n",
+      "\n",
+      "### 1.4.4.3 \u67f1\u72b6\u56fe\n",
+      "\n",
+      "---\n",
+      "**\u63d0\u793a\uff1a**\u4f60\u9700\u8981\u5c0f\u5fc3\u6587\u672c\u5bf9\u9f50\n",
+      "\n",
+      "---\n",
+      "<a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_bar_ex.html\"><img alt=\"plot_bar_ex_1.png\" class=\"align-right\" src=\"http://scipy-lectures.github.io/_images/plot_bar_ex_1.png\" style=\"width: 280.0px; height: 210.0px;\"></a>\n",
+      "\n",
+      "\u4ece\u4e0b\u9762\u7684\u4ee3\u7801\u5f00\u59cb\uff0c\u8bd5\u7740\u91cd\u65b0\u751f\u6210\u8fd9\u4e2a\u56fe\u7247\uff0c\u6dfb\u52a0\u7ea2\u67f1\u7684\u6807\u7b7e\u3002\n",
+      "\n",
+      "```python\n",
+      "n = 12\n",
+      "X = np.arange(n)\n",
+      "Y1 = (1 - X / float(n)) * np.random.uniform(0.5, 1.0, n)\n",
+      "Y2 = (1 - X / float(n)) * np.random.uniform(0.5, 1.0, n)\n",
+      "\n",
+      "pl.bar(X, +Y1, facecolor='#9999ff', edgecolor='white')\n",
+      "pl.bar(X, -Y2, facecolor='#ff9999', edgecolor='white')\n",
+      "\n",
+      "for x, y in zip(X, Y1):\n",
+      "    pl.text(x + 0.4, y + 0.05, '%.2f' % y, ha='center', va='bottom')\n",
+      "\n",
+      "pl.ylim(-1.25, +1.25)\n",
+      "```\n",
+      "\u70b9\u51fb\u56fe\u7247\u67e5\u770b\u7b54\u6848\u3002\n",
+      "\n",
+      "### 1.4.4.4 \u8f6e\u5ed3\u56fe\n",
+      "\n",
+      "---\n",
+      "**\u63d0\u793a\uff1a**\u4f60\u9700\u8981\u662f\u4f7f\u7528[clabel](http://matplotlib.sourceforge.net/api/pyplot_api.html#matplotlib.pyplot.clabel)\u547d\u4ee4\u3002\n",
+      "\n",
+      "---\n",
+      "\n",
+      "<a class=\"reference external image-reference\" href=\"http://scipy-lectures.github.io/intro/auto_examples/plot_contour_ex.html\"><img alt=\"plot_contour_ex_1.png\" class=\"align-right\" src=\"http://scipy-lectures.github.io/_images/plot_contour_ex_1.png\" style=\"width: 280.0px; height: 210.0px;\"></a>\n",
+      "\n",
+      "\u4ece\u4e0b\u9762\u7684\u4ee3\u7801\u5f00\u59cb\uff0c\u8bd5\u7740\u91cd\u65b0\u751f\u6210\u8fd9\u4e2a\u56fe\u7247\uff0c\u5c0f\u5fc3\u5904\u7406colormap (\u89c1\u4e0b\u9762\u7684[Colormaps](http://scipy-lectures.github.io/intro/matplotlib/matplotlib.html#colormaps))\u3002\n",
+      "\n",
+      "```python\n",
+      "def f(x, y):\n",
+      "    return (1 - x / 2 + x ** 5 + y ** 3) * np.exp(-x ** 2 -y ** 2)\n",
+      "\n",
+      "n = 256\n",
+      "x = np.linspace(-3, 3, n)\n",
+      "y = np.linspace(-3, 3, n)\n",
+      "X, Y = np.meshgrid(x, y)\n",
+      "\n",
+      "pl.contourf(X, Y, f(X, Y), 8, alpha=.75, cmap='jet')\n",
+      "C = pl.contour(X, Y, f(X, Y), 8, colors='black', linewidth=.5)\n",
+      "```\n",
+      "\u70b9\u51fb\u56fe\u7247\u67e5\u770b\u7b54\u6848\u3002\n",
+      "\n",
+      "### 1.4.4.5 Imshow\n",
+      "\n",
+      "---\n",
+      "**\u63d0\u793a\uff1a**\u4f60\u9700\u8981\u5c0f\u5fc3\u5904\u7406\u5728imshow\u547d\u4ee4\u4e2d\u7684\u56fe\u50cf*\u539f\u70b9*\u5e76\u4f7f\u7528[colorbar](http://matplotlib.sourceforge.net/api/pyplot_api.html#matplotlib.pyplot.colorbar)\n",
+      "\n",
+      "---\n",
+      "\n",
+      "<a class=\"reference external image-reference\" href=\"auto_examples/plot_imshow_ex.html\"><img alt=\"../../_images/plot_imshow_ex_1.png\" class=\"align-right\" src=\"../../_images/plot_imshow_ex_1.png\" style=\"width: 280.0px; height: 210.0px;\"></a>\n",
+      "\n",
+      "Starting from the code below, try to reproduce the graphic on the right taking care of colormap, image interpolation and origin.\n",
+      "def f(x, y):\n",
+      "    return (1 - x / 2 + x ** 5 + y ** 3) * np.exp(-x ** 2 - y ** 2)\n",
+      "\n",
+      "n = 10\n",
+      "x = np.linspace(-3, 3, 4 * n)\n",
+      "y = np.linspace(-3, 3, 3 * n)\n",
+      "X, Y = np.meshgrid(x, y)\n",
+      "pl.imshow(f(X, Y))\n",
+      "Click on the figure for the solution."
      ]
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
      "metadata": {},
-     "source": []
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'pl' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-2-6357e7db970a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgca\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxaxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_major_locator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mNameError\u001b[0m: name 'pl' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
