--- a/1.5. Scipy：高级科学计算.ipynb
+++ b/1.5. Scipy：高级科学计算.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:82d2aebf8c0189304ec1b9d0272b67d532500abdd2724ab4301be93c4025d044"
+  "signature": "sha256:4d6dd574625a7cc38b4e925d5e69a9748b63b5955d351aa38b1fe75d06a769a0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2854,22 +2854,241 @@
       "![](http://scipy-lectures.github.io/_images/waveform_2.png)\n",
       "\n",
       "- \u5728\u4e00\u4e9b\u60c5\u51b5\u4e0b\uff0c\u5199\u4e00\u4e2a\u51fd\u6570\u6765\u8ba1\u7b97Jacobian\uff0c\u8981\u6bd4\u8ba9leastsq\u4ece\u6570\u503c\u4e0a\u4f30\u8ba1\u5b83\u6765\u7684\u5feb\u3002\u521b\u5efa\u4e00\u4e2a\u51fd\u6570\u6765\u8ba1\u7b97\u6b8b\u5dee\u7684Jacobian\uff0c\u5e76\u4e14\u7528\u5b83\u4f5c\u4e3aleastsq\u7684\u4e00\u4e2a\u8f93\u5165\u3002\n",
-      "- \u5f53\u6211\u4eec\u60f3\u8981\u8bc6\u522b\u4fe1\u53f7\u4e2d\u975e\u5e38\u5c0f\u7684\u5cf0\u503c\uff0c\u6216\u8005\u521d\u59cb\u7684\u731c\u6d4b\u79bb\u597d\u7684\u89e3\u51b3\u65b9\u6848\u592a\u8fdc\u65f6\uff0c\u7b97\u6cd5\u7ed9\u51fa\u7684\u7ed3\u679c\u5f80\u5f80\u4e0d\u80fd\u4ee4\u4eba\u6ee1\u610f\u3002\u4e3a\u6a21\u578b\u53c2\u6570\u6dfb\u52a0\u9650\u5236When we want to detect very small peaks in the signal, or when the initial guess is too far from a good solution, the result given by the algorithm is often not satisfying. Adding constraints to the parameters of the model enables to overcome such limitations. An example of a priori knowledge we can add is the sign of our variables (which are all positive).\n",
-      "With the following initial solution:\n",
-      ">>>111\n"
+      "- \u5f53\u6211\u4eec\u60f3\u8981\u8bc6\u522b\u4fe1\u53f7\u4e2d\u975e\u5e38\u5c0f\u7684\u5cf0\u503c\uff0c\u6216\u8005\u521d\u59cb\u7684\u731c\u6d4b\u79bb\u597d\u7684\u89e3\u51b3\u65b9\u6848\u592a\u8fdc\u65f6\uff0c\u7b97\u6cd5\u7ed9\u51fa\u7684\u7ed3\u679c\u5f80\u5f80\u4e0d\u80fd\u4ee4\u4eba\u6ee1\u610f\u3002\u4e3a\u6a21\u578b\u53c2\u6570\u6dfb\u52a0\u9650\u5236\u53ef\u4ee5\u786e\u4fdd\u514b\u670d\u8fd9\u4e9b\u5c40\u9650\u6027\u3002\u6211\u4eec\u53ef\u4ee5\u6dfb\u52a0\u7684\u5148\u524d\u7ecf\u9a8c\u662f\u53d8\u91cf\u7684\u7b26\u53f7\uff08\u90fd\u662f\u6b63\u7684\uff09\u3002\n",
+      "\n",
+      "\u7528\u4e0b\u5217\u521d\u59cb\u89e3\uff1a"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "1.5.11.14.4. Going further\n",
-      "\n",
-      "Try with a more complex waveform (for instance data/waveform_2.npy) that contains three significant peaks. You must adapt the model which is now a sum of Gaussian functions instead of only one Gaussian peak."
+      "x0 = np.array([3, 50, 20, 1], dtype=float)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\u6dfb\u52a0\u4e86\u8fb9\u754c\u9650\u5236\u4e4b\u540e\u6bd4\u8f83\u4e00\u4e0b`scipy.optimize.leastsq`\u4e0e`scipy.optimize.fmin_slsqp`\u7684\u7ed3\u679c\u3002\n",
+      "\n",
+      "---\n",
+      "[2]\t\u672c\u6559\u7a0b\u7684\u6570\u636e\u90e8\u5206\u6765\u81ea\u4e8e[FullAnalyze software](http://fullanalyze.sourceforge.net/)\u7684\u6f14\u793a\u6570\u636e\uff0c\u7531 [GIS DRAIX](http://www.ore.fr/rubrique.php3?id_rubrique=24) \u53cb\u60c5\u63d0\u4f9b\u3002\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 1.5.11.15 \u56fe\u50cf\u5904\u7406\u5e94\u7528\uff1a\u8ba1\u6570\u6c14\u6ce1\u548c\u672a\u878d\u5316\u7684\u9897\u7c92\n",
+      "\n",
+      "![](http://scipy-lectures.github.io/_images/MV_HFV_012.jpg)\n",
+      "\n",
+      "#### 1.5.11.15.1 \u95ee\u9898\u63cf\u8ff0\n",
+      "\n",
+      "1. \u6253\u5f00\u56fe\u50cf\u6587\u4ef6MV_HFV_012.jpg\u5e76\u4e14\u6d4f\u89c8\u4e00\u4e0b\u3002\u770b\u4e00\u4e0bimshow\u6587\u6863\u5b57\u7b26\u4e32\u4e2d\u7684\u53c2\u6570\uff0c\u7528\u201c\u53f3\u201d\u5bf9\u9f50\u6765\u663e\u793a\u56fe\u7247\uff08\u539f\u70b9\u5728\u5de6\u4e0b\u89d2\uff0c\u800c\u4e0d\u662f\u50cf\u6807\u51c6\u6570\u7ec4\u5728\u53f3\u4e0a\u89d2\uff09\u3002\n",
+      "\n",
+      "    \u8fd9\u4e2a\u626b\u63cf\u5143\u7d20\u663e\u5fae\u56fe\u663e\u793a\u4e86\u4e00\u4e2a\u5e26\u6709\u4e00\u4e9b\u6c14\u6ce1\uff08\u9ed1\u8272\uff09\u548c\u672a\u6eb6\u89e3\u6c99\uff08\u6df1\u7070\uff09\u7684\u73bb\u7483\u6837\u672c\uff08\u8f7b\u7070\u77e9\u9635\uff09\u3002\u6211\u4eec\u60f3\u8981\u5224\u65ad\u6837\u672c\u7531\u4e09\u4e2a\u72b6\u6001\u8986\u76d6\u7684\u767e\u5206\u6bd4\uff0c\u5e76\u4e14\u9884\u6d4b\u6c99\u7c92\u548c\u6c14\u6ce1\u7684\u5178\u578b\u5927\u5c0f\u548c\u4ed6\u4eec\u7684\u5927\u5c0f\u7b49\u3002\n",
+      "\n",
+      "2. \u4fee\u5efa\u56fe\u7247\uff0c\u5220\u9664\u5e26\u6709\u6d4b\u91cf\u4fe1\u606f\u4e2d\u5e95\u90e8\u9762\u677f\u3002\n",
+      "\n",
+      "3. \u7528\u4e2d\u4f4d\u6570\u8fc7\u6ee4\u7a0d\u7a0d\u8fc7\u6ee4\u4e00\u4e0b\u56fe\u50cf\u4ee5\u4fbf\u6539\u8fdb\u5b83\u7684\u76f4\u65b9\u56fe\u3002\u770b\u4e00\u4e0b\u76f4\u65b9\u56fe\u7684\u53d8\u5316\u3002\n",
+      "\n",
+      "4. \u4f7f\u7528\u8fc7\u6ee4\u540e\u56fe\u50cf\u7684\u76f4\u65b9\u56fe\uff0c\u51b3\u5b9a\u5141\u8bb8\u5b9a\u4e49\u6c99\u7c92\u50cf\u7d20\uff0c\u73bb\u7483\u50cf\u7d20\u548c\u6c14\u6ce1\u50cf\u7d20\u63a9\u853d\u7684\u9608\u9650\u3002\u5176\u4ed6\u7684\u9009\u9879\uff08\u5bb6\u5ead\u4f5c\u4e1a\uff09\uff1a\u5199\u4e00\u4e2a\u51fd\u6570\u4ece\u76f4\u65b9\u56fe\u7684\u6700\u5c0f\u503c\u81ea\u52a8\u5224\u65ad\u9608\u9650\u3002\n",
+      "\n",
+      "5. \u5c06\u4e09\u79cd\u4e0d\u540c\u7684\u76f8\u7528\u4e0d\u540c\u7684\u989c\u8272\u4e0a\u8272\u5e76\u663e\u793a\u56fe\u7247\u3002\n",
+      "\n",
+      "6. \u7528\u6570\u5b66\u5f62\u6001\u5b66\u6e05\u7406\u4e0d\u540c\u7684\u76f8\u3002\n",
+      "\n",
+      "7. \u4e3a\u6240\u6709\u6c14\u6ce1\u548c\u6c99\u7c92\u505a\u6807\u7b7e\uff0c\u4ece\u6c99\u7c92\u4e2d\u5220\u9664\u5c0f\u4e8e10\u50cf\u7d20\u7684\u63a9\u853d\u3002\u8981\u8fd9\u6837\u505a\uff0c\u7528`ndimage.sum`\u6216`np.bincount`\u6765\u8ba1\u7b97\u6c99\u7c92\u5927\u5c0f\u3002\n",
+      "\n",
+      "8. \u8ba1\u7b97\u6c14\u6ce1\u7684\u5e73\u5747\u5927\u5c0f\u3002\n",
+      "\n",
+      "### 1.5.11.16 \u56fe\u50cf\u5904\u7406\u7ec3\u4e60\uff1a\u73bb\u7483\u4e2d\u7684\u672a\u878d\u5316\u9897\u7c92\u7684\u7b54\u6848\u4f8b\u5b50"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numpy as np\n",
+      "import pylab as pl\n",
+      "from scipy import ndimage"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "![](http://scipy-lectures.github.io/_images/MV_HFV_012.jpg)\n",
+      "\n",
+      "- \u6253\u5f00\u56fe\u50cf\u6587\u4ef6MV_HFV_012.jpg\u5e76\u4e14\u6d4f\u89c8\u4e00\u4e0b\u3002\u770b\u4e00\u4e0bimshow\u6587\u6863\u5b57\u7b26\u4e32\u4e2d\u7684\u53c2\u6570\uff0c\u7528\u201c\u53f3\u201d\u5bf9\u9f50\u6765\u663e\u793a\u56fe\u7247\uff08\u539f\u70b9\u5728\u5de6\u4e0b\u89d2\uff0c\u800c\u4e0d\u662f\u50cf\u6807\u51c6\u6570\u7ec4\u5728\u53f3\u4e0a\u89d2\uff09\u3002"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "dat = pl.imread('data/MV_HFV_012.jpg')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- \u4fee\u5efa\u56fe\u7247\uff0c\u5220\u9664\u5e26\u6709\u6d4b\u91cf\u4fe1\u606f\u4e2d\u5e95\u90e8\u9762\u677f\u3002"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "dat = dat[60:]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- \u7528\u4e2d\u4f4d\u6570\u8fc7\u6ee4\u7a0d\u7a0d\u8fc7\u6ee4\u4e00\u4e0b\u56fe\u50cf\u4ee5\u4fbf\u6539\u8fdb\u5b83\u7684\u76f4\u65b9\u56fe\u3002\u770b\u4e00\u4e0b\u76f4\u65b9\u56fe\u7684\u53d8\u5316\u3002"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "filtdat = ndimage.median_filter(dat, size=(7,7))\n",
+      "hi_dat = np.histogram(dat, bins=np.arange(256))\n",
+      "hi_filtdat = np.histogram(filtdat, bins=np.arange(256))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "![](http://scipy-lectures.github.io/_images/exo_histos.png)\n",
+      "- \u4f7f\u7528\u8fc7\u6ee4\u540e\u56fe\u50cf\u7684\u76f4\u65b9\u56fe\uff0c\u51b3\u5b9a\u5141\u8bb8\u5b9a\u4e49\u6c99\u7c92\u50cf\u7d20\uff0c\u73bb\u7483\u50cf\u7d20\u548c\u6c14\u6ce1\u50cf\u7d20\u63a9\u853d\u7684\u9608\u9650\u3002\u5176\u4ed6\u7684\u9009\u9879\uff08\u5bb6\u5ead\u4f5c\u4e1a\uff09\uff1a\u5199\u4e00\u4e2a\u51fd\u6570\u4ece\u76f4\u65b9\u56fe\u7684\u6700\u5c0f\u503c\u81ea\u52a8\u5224\u65ad\u9608\u9650\u3002"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "void = filtdat <= 50\n",
+      "sand = np.logical_and(filtdat > 50, filtdat <= 114)\n",
+      "glass = filtdat > 114"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- \u5c06\u4e09\u79cd\u4e0d\u540c\u7684\u76f8\u7528\u4e0d\u540c\u7684\u989c\u8272\u4e0a\u8272\u5e76\u663e\u793a\u56fe\u7247\u3002"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "phases = void.astype(np.int) + 2*glass.astype(np.int) + 3*sand.astype(np.int)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "![](http://scipy-lectures.github.io/_images/three_phases.png)\n",
+      "- \u7528\u6570\u5b66\u5f62\u6001\u5b66\u6e05\u7406\u4e0d\u540c\u7684\u76f8\u3002"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sand_op = ndimage.binary_opening(sand, iterations=2)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- \u4e3a\u6240\u6709\u6c14\u6ce1\u548c\u6c99\u7c92\u505a\u6807\u7b7e\uff0c\u4ece\u6c99\u7c92\u4e2d\u5220\u9664\u5c0f\u4e8e10\u50cf\u7d20\u7684\u63a9\u853d\u3002\u8981\u8fd9\u6837\u505a\uff0c\u7528`ndimage.sum`\u6216`np.bincount`\u6765\u8ba1\u7b97\u6c99\u7c92\u5927\u5c0f\u3002"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sand_labels, sand_nb = ndimage.label(sand_op)\n",
+      "sand_areas = np.array(ndimage.sum(sand_op, sand_labels, np.arange(sand_labels.max()+1)))\n",
+      "mask = sand_areas > 100\n",
+      "remove_small_sand = mask[sand_labels.ravel()].reshape(sand_labels.shape)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "![](http://scipy-lectures.github.io/_images/sands.png)\n",
+      "- \u8ba1\u7b97\u6c14\u6ce1\u7684\u5e73\u5747\u5927\u5c0f\u3002"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "bubbles_labels, bubbles_nb = ndimage.label(void)\n",
+      "bubbles_areas = np.bincount(bubbles_labels.ravel())[1:]\n",
+      "mean_bubble_size = bubbles_areas.mean()\n",
+      "median_bubble_size = np.median(bubbles_areas)\n",
+      "mean_bubble_size, median_bubble_size"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "(2416.863157894737, 60.0)"
+       ]
+      }
+     ],
+     "prompt_number": 10
     }
    ],
    "metadata": {}
