--- a/2.1. Python高级功能（Constructs）.ipynb
+++ b/2.1. Python高级功能（Constructs）.ipynb
@@ -1,13 +1,49 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4241644a06829855e5a79a3650ab26bc658c3eae01016cde5ae1f1fc3eb9aada"
+  "signature": "sha256:0752b46f3f143942b2f6b8ee5c422b9198b47412d5c4858acbbf228b54b58901"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "---\n",
+      "**\u4f5c\u8005**:\tZbigniew J\u0119drzejewski-Szmek\n",
+      "\n",
+      "---\n",
+      "\n",
+      "\u8fd9\u4e00\u7ae0\u662f\u5173\u4e8ePython\u8bed\u8a00\u7684\u9ad8\u7ea7\u7279\u6027-\u4ece\u4e0d\u662f\u6bcf\u79cd\u8bed\u8a00\u90fd\u6709\u8fd9\u4e9b\u7279\u6027\u7684\u89d2\u5ea6\u6765\u8bf4\uff0c\u4e5f\u53ef\u4ee5\u4ece\u4ed6\u4eec\u5728\u66f4\u590d\u6742\u7684\u7a0b\u5e8f\u548c\u5e93\u4e2d\u66f4\u6709\u7528\u8fd9\u4e2a\u89d2\u5ea6\u6765\u8bf4\uff0c\u4f46\u662f\uff0c\u5e76\u4e0d\u662f\u8bf4\u7279\u522b\u4e13\u4e1a\u6216\u7279\u522b\u590d\u6742\u3002\n",
+      "\n",
+      "\u9700\u8981\u5f3a\u8c03\u7684\u662f\u672c\u7ae0\u662f\u7eaf\u7cb9\u5173\u4e8e\u8bed\u8a00\u672c\u8eab-\u5173\u4e8e\u7531\u7279\u6b8a\u8bed\u6cd5\u652f\u6301\u7684\u7279\u6027\uff0c\u7528\u4e8e\u8865\u5145Python\u6807\u51c6\u5e93\u7684\u529f\u80fd\uff0c\u806a\u660e\u7684\u5916\u90e8\u6a21\u5757\u4e0d\u4f1a\u5b9e\u73b0\u8fd9\u90e8\u5206\u7279\u6027\u3002\n",
+      "\n",
+      "\u5f00\u53d1Python\u7a0b\u5e8f\u8bed\u8a00\u7684\u6d41\u7a0b\u3001\u8bed\u6cd5\u662f\u60df\u4e00\u7684\u56e0\u4e3a\u975e\u5e38\u900f\u660e\uff0c\u63d0\u8bae\u7684\u4fee\u6539\u4f1a\u5728\u516c\u5171\u90ae\u4ef6\u5217\u8868\u4e2d\u4ece\u591a\u79cd\u89d2\u5ea6\u53bb\u8bc4\u4f30\uff0c\u6700\u7ec8\u7684\u51b3\u7b56\u662f\u6765\u81ea\u4e8e\u60f3\u8c61\u4e2d\u7684\u7528\u4f8b\u7684\u91cd\u8981\u6027\u3001\u5e26\u6765\u66f4\u591a\u8bed\u8a00\u7279\u6027\u6240\u4ea7\u751f\u7684\u8d1f\u62c5\u3001\u4e0e\u5176\u4ed6\u8bed\u6cd5\u7684\u4e00\u81f4\u6027\u53ca\u63d0\u8bae\u7684\u53d8\u5316\u662f\u5426\u6613\u4e8e\u8bfb\u5199\u548c\u7406\u89e3\u7684\u6743\u8861\u3002\u8fd9\u4e2a\u6d41\u7a0b\u88ab\u5b9a\u578b\u5728Python\u589e\u5f3a\u5efa\u8bae\u4e2d-[PEPs](http://www.python.org/dev/peps/)\u3002\u56e0\u6b64\uff0c\u672c\u7ae0\u4e2d\u7684\u7279\u6027\u90fd\u662f\u5728\u663e\u793a\u51fa\u786e\u5b9e\u89e3\u51b3\u4e86\u73b0\u5b9e\u95ee\u9898\uff0c\u5e76\u4e14\u4ed6\u4eec\u7684\u4f7f\u7528\u5c3d\u53ef\u80fd\u7b80\u6d01\u540e\u624d\u88ab\u6dfb\u52a0\u7684\u3002\n",
+      "\n",
+      "## 2.1.1 \u8fed\u4ee3\u5668\u3001\u751f\u6210\u5668\u8868\u8fbe\u5f0f\u548c\u751f\u6210\u5668\n",
+      "\n",
+      "### 2.1.1.1 \u8fed\u4ee3\u5668\n",
+      "\n",
+      "---\n",
+      "\u7b80\u6d01\n",
+      "\n",
+      "\u91cd\u590d\u7684\u5de5\u4f5c\u662f\u6d6a\u8d39\uff0c\u7528\u4e00\u4e2a\u6807\u51c6\u7684\u7279\u6027\u66ff\u4ee3\u4e0d\u540c\u7684\u81ea\u4ea7\u65b9\u6cd5\u901a\u5e38\u4f7f\u4e8b\u7269\u7684\u53ef\u8bfb\u6027\u548c\u5171\u7528\u6027\u66f4\u597d\u3002\n",
+      "Guido van Rossum \u2014 [\u4e3aPython\u6dfb\u52a0\u53ef\u9009\u7684\u9759\u6001\u8f93\u5165](http://www.artima.com/weblogs/viewpost.jsp?thread=86641)\n",
+      "\n",
+      "---\n",
+      "\n",
+      "\u8fed\u4ee3\u5668\u662f\u7ee7\u627f\u4e86[\u8fed\u4ee3\u534f\u8bae](http://docs.python.org/dev/library/stdtypes.html#iterator-types)\u7684\u5bf9\u8c61-\u672c\u8d28\u4e0a\uff0c\u8fd9\u610f\u5473\u7740\u5b83\u6709\u4e00\u4e2a[next](http://docs.python.org/2.7/library/stdtypes.html#iterator.next)\u65b9\u6cd5\uff0c\u8c03\u7528\u65f6\u4f1a\u8fd4\u56de\u5e8f\u5217\u4e2d\u7684\u4e0b\u4e00\u4e2a\u9879\u76ee\uff0c\u5f53\u6ca1\u6709\u4e1c\u897f\u53ef\u8fd4\u56de\u65f6\uff0c\u629b\u51fa[StopIteration](http://docs.python.org/2.7/library/exceptions.html#exceptions.StopIteration)\u5f02\u5e38\u3002\n",
+      "\n",
+      "\u8fed\u4ee3\u5668\u5bf9\u8c61\u53ea\u5141\u8bb8\u5faa\u73af\u4e00\u6b21\u3002\u5b83\u4fdd\u7559\u4e86\u5355\u6b21\u8fed\u4ee3\u4e2d\u7684\u72b6\u6001\uff08\u4f4d\u7f6e\uff09\uff0c\u6216\u8005\u4ece\u53e6\u5916\u7684\u89d2\u5ea6\u6765\u770b\uff0c\u5e8f\u5217\u4e0a\u7684\u6bcf\u6b21\u5faa\u73af\u9700\u8981\u4e00\u4e2a\u8fed\u4ee3\u5668\u5bf9\u8c61\u3002\u8fd9\u610f\u5473\u7740\u6211\u4eec\u53ef\u4ee5\u5728\u4e00\u4e2a\u5e8f\u5217\u4e0a\u540c\u65f6\u5faa\u73af\u591a\u6b21\u3002\u4ece\u5e8f\u5217\u4e0a\u5206\u79bb\u51fa\u5faa\u73af\u903b\u8f91\u4f7f\u6211\u4eec\u53ef\u4ee5\u6709\u4e0d\u6b62\u4e00\u79cd\u65b9\u6cd5\u53bb\u5faa\u73af\u3002\n",
+      "\n",
+      "\u5728\u5bb9\u5668\u4e0a\u8c03\u7528[\\_\\_iter\\_\\_](http://docs.python.org/2.7/reference/datamodel.html#object.__iter__)\u65b9\u6cd5\u6765\u521b\u5efa\u4e00\u4e2a\u8fed\u4ee3\u5668\u5bf9\u8c61\u662f\u83b7\u5f97\u8fed\u4ee3\u5668\u7684\u6700\u7b80\u5355\u65b9\u5f0f\u3002[iter](http://docs.python.org/2.7/library/functions.html#iter)\u51fd\u6570\u5e2e\u6211\u4eec\u5b8c\u6210\u8fd9\u9879\u5de5\u4f5c\uff0c\u8282\u7701\u4e86\u4e00\u4e9b method on a container to create an iterator object is the most straightforward way to get hold of an iterator. The iter function does that for us, saving a few keystrokes.\n",
+      "\n",
+      "823286827"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
